deployment/kubernetes/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kpb-network-policy
  namespace: kpb-travels
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: kpb-travels
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: kpb-travels
  - to:
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 53
